Stitch library's upsert fails with "Cannot call setValue on the root object" when matcher predicate is empty

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.9
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 2019-02-11, Query 2019-02-25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Adding a test here using {} for the matcher predicate (first argument) should be sufficient to reproduce this.

       

      https://github.com/mongodb/mongo/blob/master/src/mongo/embedded/stitch_support/stitch_support_test.cpp#L537-L540

            Assignee:
            Jacob Evans (Inactive)
            Reporter:
            Michael O'Brien
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: