SERVER-39280 Robustify upsert in Stitch library