src/mongo/embedded/stitch_support/stitch_support.cpp
@@ -593,15 +593,20 @@ stitch_support_v1_update_apply(stitch_support_v1_update* const update,
 
 uint8_t* MONGO_API_CALL stitch_support_v1_update_upsert(stitch_support_v1_update* const update,
                                                         stitch_support_v1_status* status) {
-    return enterCXX(mongo::getStatusImpl(status), [&] {
+    return enterCXX(mongo::getStatusImpl(status), [=] {
         mongo::FieldRefSet immutablePaths;  //  Empty set
         bool docWasModified = false;
 
         mongo::mutablebson::Document mutableDoc(mongo::BSONObj(),
                                                 mongo::mutablebson::Document::kInPlaceDisabled);
 
-        uassertStatusOK(update->updateDriver.populateDocumentWithQueryFields(
-            update->opCtx.get(), *update->matcher->matcher.getQuery(), immutablePaths, mutableDoc));
+        if (update->matcher) {
+            uassertStatusOK(update->updateDriver.populateDocumentWithQueryFields(
+                update->opCtx.get(),
+                *update->matcher->matcher.getQuery(),
+                immutablePaths,
+                mutableDoc));
+        }
 
         uassertStatusOK(update->updateDriver.update(mongo::StringData() /* matchedField */,
                                                     &mutableDoc,
@@ -610,7 +615,7 @@ uint8_t* MONGO_API_CALL stitch_support_v1_update_upsert(stitch_support_v1_update
                                                     true /* isInsert */,
                                                     nullptr /* logOpRec */,
                                                     &docWasModified,
-                                                    nullptr /*modifiedPaths*/));
+                                                    nullptr /* modifiedPaths */));
 
         auto outputObj = mutableDoc.getObject();
         size_t outputSize = static_cast<size_t>(outputObj.objsize());
